<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="Network">
		<CheckBoxPreference android:key="photostream.enable-network"
			android:title="@string/user_preferences_enable_network"
			android:defaultValue="true" />

		<ListPreference android:dialogTitle=""
			android:key="photostream.networkName"
			android:title="@string/user_preferences_network"
			android:entries="@array/network_names"
			android:entryValues="@array/network_values"
			android:dependency="photostream.enable-network"
			android:defaultValue="flickr" />

		<EditTextPreference
			android:title="@string/user_preferences_name"
			android:key="photostream.networkUsername"
			android:dependency="photostream.enable-network" />
<!--
		<EditTextPreference
			android:title="@string/user_preferences_passowrd"
			android:key="photostream.networkPassword"
			android:dependency="photostream.enable-network" />
-->
	</PreferenceCategory>


	<PreferenceCategory android:title="Rotation">
		<CheckBoxPreference android:key="photostream.enable-rotation"
			android:title="@string/user_preferences_change_automaticaly"
			android:defaultValue="false" />

		<ListPreference android:dialogTitle=""
			android:key="photostream.rotation-schedule"
			android:title="@string/user_preferences_change_background_period"
			android:entries="@array/background_change_period_names"
			android:entryValues="@array/background_change_period_values"
			android:dependency="photostream.enable-rotation"
			android:defaultValue="54000" />

		<ListPreference android:dialogTitle=""
			android:key="photostream.rotation_background_source"
			android:title="@string/user_preferences_background_source"
			android:entries="@array/photo_source_type_names"
			android:entryValues="@array/photo_source_type_values"
			android:dependency="photostream.enable-rotation"
			android:defaultValue="personal" />
			
		<CheckBoxPreference android:key="photostream.rotation_background_notification"
			android:title="@string/user_preferences_rotation_background_notification"
			android:dependency="photostream.enable-rotation"
			android:defaultValue="false" />
	</PreferenceCategory>

	<ListPreference android:dialogTitle=""
		android:key="photostream.images_per_request"
		android:title="@string/user_preferences_images_per_request"
		android:entries="@array/images_per_request_names"
		android:entryValues="@array/images_per_request_names"
		android:defaultValue="6" />

	<ListPreference android:dialogTitle=""
		android:key="photostream.effects"
		android:title="@string/user_preferences_effects_title"
		android:entries="@array/effects_names"
		android:entryValues="@array/effects_values"
		android:defaultValue="random" />

</PreferenceScreen>
