<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2008 Google Inc. Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<!--
		<item android:id="@+id/menu_item_radar"
		android:icon="@drawable/ic_menu_radar" android:alphabeticShortcut="r"
		android:title="@string/menu_item_radar_label" />
	-->
	<item android:id="@+id/menu_item_share" android:title="@string/menu_item_share_label"
		android:icon="@drawable/ic_dialog_email" />
	<item android:id="@+id/menu_item_set" android:title="@string/menu_item_photo_set"
		android:icon="@drawable/ic_dialog_wallpaper" />
	<item android:id="@+id/menu_item_save_as_faivorites"
		android:title="@string/menu_item_add_to_faivorites" android:icon="@drawable/ic_dialog_favorite" />
	<item android:id="@+id/menu_item_similar" android:title="@string/menu_item_similar"
		android:icon="@drawable/ic_dialog_similar" />

</menu>