<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical" android:gravity="center">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="5dip"
			android:textColor="@android:color/white" android:text="@string/category_name_label" />
		<!-- android:textSize="18px" -->

		<EditText android:id="@+id/category_name"
			android:paddingLeft="5dip" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:singleLine="true"/>

		<TextView android:layout_width="wrap_content"
			android:paddingLeft="5dip" android:layout_height="wrap_content"
			android:textColor="@android:color/white" android:text="@string/category_tags_label" />

		<EditText android:id="@+id/category_tags"
			android:paddingLeft="5dip" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:maxLines="5" android:minLines="5"
			android:gravity="top"/>

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="right">

		<Button android:id="@+id/ok_button" android:text="@string/ok_button_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:id="@+id/cancel_button" android:text="@string/cancel_button_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

	</LinearLayout>

</LinearLayout>